# communications_agent

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
communication_agent/: __init__.py  agent_state.py  llm_client.py  main.py
communication_agent/api/: __init__.py  battery.py  chat.py  root.py
communication_agent/core/: session.py  tools.py
communication_agent/models/: tool_schemas.py
communication_agent/services/: battery_utility_calculator.py  chat_service.py  market_adapter.py  pipeline.py  profile_0.csv
communication_agent/static/: index.html
examples/: battery_demo.py
src/: main.py
src/api/: __init__.py  api_router.py  battery.py  chat.py  cpu.py  root.py
src/api/routes/: battery_endpoint.py  chat_endpoint.py  cpu_endpoint.py  root_endpoint.py
src/configs/: config_lms.yaml  settings.py
src/core/: tools.py
src/core/db/: __init__.py
src/core/domain/: battery_logic.py  battery_utility_calculator.py  battery_utility_logic.py  chat_session.py  cpu_forecast_logic.py  cpu_logic.py  storage.py
src/core/llm/: factory.py
src/core/prompts/: base.py  battery_assistant.py
src/fastapi_app/: main.py
src/fastapi_app/api/: __init__.py  battery.py  chat.py  cpu.py
src/fastapi_app/core/: cpu_forecaster.py  session.py  tools.py
src/fastapi_app/data/: battery-report.html
src/fastapi_app/dependencies/: auth.py
src/fastapi_app/models/: battery.py  cpu.py  tool_schemas.py
src/models/: chat.py  tool_schemas.py
src/services/: chat_service.py  test.py
src/static/: index.html
src/utils/: auth.py
(+42 files in other folders)
